# calc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  index.html  mkdocs.yml  release-plz.toml  requirements.txt  spec.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs-to-ghpages.yml  docs.yml  release-plz.yml
calc-cli/: Cargo.toml
calc-cli/src/: lib.rs  main.rs
calc-cli/tests/: completions.rs
calc-core/: Cargo.toml  README.md
calc-core/src/: calculator.rs  lib.rs  license.rs  proprietary.rs  response.rs  tags.rs  template.rs
calc-core/src/calculators/: abcd2.rs  abpi.rs  amts.rs  asrs.rs  audit.rs  auditc.rs  bode.rs  cha2ds2vasc.rs  chalice.rs  child_pugh.rs  ckd_risk.rs  curb65.rs  das28.rs  egfr.rs  epds.rs  euroscore2.rs  feverpain.rs  fib4.rs  fourat.rs  gad7.rs  gleason.rs  grace.rs  hasbled.rs  heart.rs  ipss.rs  meld.rs  mod.rs  mrc_dyspnoea.rs  news2.rs  nhfs.rs  npi.rs  padua.rs  phq9.rs  qfracture.rs  qrisk3.rs  qsofa.rs  sofa.rs  timi.rs  uacr.rs  ukeld.rs  (+3 more)
calc-web/: serve.sh
calc-web/calculators/: adhd-questionnaire-asrs111.html  feverpain.html
calculators/: adhd-questionnaire-asrs111.html  feverpain.html
docs/: calculators.md  cli-reference.md  how-it-works.md  index.md  install.md  walkthrough.md
docs/stylesheets/: extra.css
examples/: README.md  auditc.json  feverpain.json  gad7.json  news2.json
gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.css  App.tsx  ErrorBoundary.tsx  main.tsx  vite-env.d.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/api/: calc.ts
gui/src/calculators/: FeverPain.tsx
s/: docs  gui-dev  install  up
shared/: gitehr-bridge.js  styles.css
skills/build-calculator/: SKILL.md
spec/: calculator-input-definitions.md  calculator-roadmap.md  calculators.md  gui.md  multilingual.md
src/: calculator.rs  lib.rs  main.rs  proprietary.rs
src/calculators/: abcd2.rs  abpi.rs  asrs.rs  bode.rs  chalice.rs  das28.rs  egfr.rs  feverpain.rs  fib4.rs  fourat.rs  gad7.rs  hasbled.rs  ipss.rs  mod.rs  news2.rs  phq9.rs  qfracture.rs  qsofa.rs  uacr.rs
