[workspace]
members = [
    "calc-core",
    "calc-cli",
]
# The Tauri desktop GUI is excluded from the workspace because Tauri pulls in a
# very different dependency graph (webkit/webview bindings, tao, wry, etc.)
# that would slow every `cargo build` for the engine + CLI. It has its own
# Cargo.lock under `gui/src-tauri/`. Same arrangement as gitehr/.
exclude = [
    "gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Marcus Baw"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/pacharanero/calc"
homepage = "https://github.com/pacharanero/calc"

[workspace.dependencies]
# Shared across the calculator crates. Kept deliberately small: calc-core is a
# pure leaf (serde only); calc-cli adds a thin CLI layer (anyhow, clap).
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
