[package]
name = "calc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the open clinical calculators. Ships as the standalone `calc` binary, and is reusable as a library (`calc_cli::run`) by host CLIs such as GitEHR's `gitehr calc`."

# Standalone, cargo-installable binary: `cargo install --git https://github.com/pacharanero/calc calc-cli`
[[bin]]
name = "calc"
path = "src/main.rs"

# Library surface reusable by host CLIs (e.g. GitEHR's `gitehr calc`) so they repeat nothing.
[lib]
name = "calc_cli"
path = "src/lib.rs"

[dependencies]
# Dual path+version dep: cargo uses the path locally so a clone builds the
# whole workspace from source, but the version field is what gets recorded
# when calc-cli is packaged for crates.io. Bump in lockstep with calc-core
# (workspace version), release-plz handles this automatically.
calc-core = { path = "../calc-core", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
