[package]
name = "calc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure clinical calculator engine - scoring logic and result schema shared by the `calc` CLI, the web tools, and downstream hosts. Deliberately a dependency-light leaf crate: serde only, no host application, no async runtime."

[lib]
name = "calc_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
