[package]
name = "calc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure clinical calculator engine - scoring logic and result schema shared by the `calc` CLI, the web tools, and downstream hosts. Deliberately a dependency-light leaf crate: serde only, no host application, no async runtime."
readme = "README.md"
documentation = "https://docs.rs/calc-core"
keywords = ["clinical", "medical", "calculator", "scoring", "healthcare"]
# Five-slot maximum on crates.io. `science::medicine` is the established
# slug; `command-line-utilities` is added so cargo install discoverability
# is not lost for users searching for the CLI side of the project.
categories = ["science", "command-line-utilities"]

[lib]
name = "calc_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
