[package]
name = "calc-gui"
version = "0.1.0"
description = "Open clinical calculators - native desktop GUI"
authors = ["Marcus Baw"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pacharanero/calc"

# The lib name carries a `_lib` suffix to dodge a Windows-only name-collision
# between the lib and the bin (https://github.com/rust-lang/cargo/issues/8519).
# This is a Tauri 2 convention, not a calc choice.
[lib]
name = "calc_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The engine. Dual path+version dep: a clone of the calc repo builds against
# the local path (no waiting for crates.io), while a downstream consumer
# cloning just this gui directory could swap to the published version. No
# FFI, no schema duplication - the same Rust types the CLI uses are the
# types the Tauri commands return.
calc-core = { path = "../../calc-core", version = "0.1.0" }
